--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-<meta charset="utf-8">
 
 <head>
   <meta name="description" content="Webpage description goes here" />
@@ -15,7 +14,7 @@
 <body>
   
 <div class="container">
-  Привет!
+  Privet!
 </div>
 
 <script>
